# generic-flask-skeleton

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  pull_request_template.md  pyproject.toml  requirements.txt  run.py  startup.sh
.gitlab/merge_request_templates/: merge_request_template.md
application_name/: app.py  database.py
application_name/resource_name/: models.py  views.py
config/: config.py
migrations/versions/: 623d05ab72e5_create_table_for_example_model.py
