[tool.poetry]
name = "generic-flask-skeleton"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
psycopg2-binary = "^2.8"
sqlalchemy = "^1.3"
GitPython = "^3.0"
Flask-Migrate = "^2.5"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
pytest = "^5.3"
pre-commit = "^1.20"
pytest-flask = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
